--- a/form.html
+++ b/form.html
@@ -7,22 +7,37 @@
 </head>
 <body>
 <h3>personal detail form</h3>
+<fieldset>
 <form>
 <label><h4>name</h4></label><br>
 <input type="text" id="name"><br>
-<label>EMAIL ID</label><br>
-<input type="text" id="email id"><br><br>
-<label>contact number (this will be hidden)</label><br>
-<input type="password" id="contact nmber"><br><br>
-<label>gender</label><br>
+<label><h4>class</h4></label>
+<input type="text" id="name"><br>
+<label><h4>email id</h4></label>
+<input type="text" id="email id"><br>
+<label><h4>birthday:</h4></label>
+<input type="date" id="birthday" name="birthday"><br>
+<label><h4>contact number (this will be hidden)</h4></label><br>
+<input type="password" id="contact nmber"><br>
+<label><h4>gender</h4></label><br>
 <input type="radio" id="female" name="gender" value="female">female<br>
 <input type="radio" id="male" name="gender" value="male">male<br>
-<label>favourite city</label><br>
-<input type="checkbox" id="city" value="delhi">delhi<br>
-<input type="checkbox" id="city" value="mumbai">mumbai<br>
+<label><h4>favourite city</h4></label><br>
+<select name="favourite city">
+<option value="mumbai">mumbai</option>
+<option value="delhi">delhi</option>
+<option value="hydrabad">hydrabad</option>
+<option value="kolkata">kolkata</option>
+<option value="ranchi">ranchi</option>
+<option value="amritsar">amritsar</option>
+<option value="srinagar">srinagar</option>
+<option value="thiruvananthpuram">thiruvananthpuram</option>
+<option value="jaipur">jaipur</option>
+<option value="lukhnow">lucknow</option>
+</select><br>
 <input type="submit">
 
-
+</fieldset>
 </form>
 </body>
 </html>
