--- a/index.html
+++ b/index.html
@@ -1,20 +1,29 @@
 <html>
     <head>
-        <title></title>
-        <style>
-            h1{color:aqua;}
-            *{height: 50px;}
-        </style>
-         <link rel="stylesheet" href="style.css">
+        <tiitle>Project Form</tiitle>
     </head>
     <body>
-        <p style="color:blueviolet;">Para 1</p>
-        <p class="a" style="color:brown;">Para 2</p>
-        <p style="color:beige;">Para 3</p>
-        <p class="a" style="color:blue;">Para 4</p>
-        <p id="123">Para 5</p>
-
-        <h1>Heading tag</h1>
-        <h1>First heading tag</h1>
+        <fieldset>
+            <legend>Example Registration form</legend>
+            <form>
+                <lable>Name</lable>
+                <input type="text" placeholder="Enter your name"><br><br>
+                <lable>Exam Name</lable>
+                <input type="text"><br><br>
+                <lable>E-Mail</lable>
+                <input type="text"><br><br>
+                <lable>Age</lable>
+                <input type="Number"><br><br>
+                <lable>Subjects</lable><br>
+                <input type="checkbox">Maths<br>
+                <input type="checkbox">Physics<br>
+                <input type="checkbox">Chemistry<br>
+                <input type="checkbox">English<br>
+                <select> 
+                    <option>driver lissence</option>
+                    <option>other form of identification</option>
+                </select>
+            </form>
+        </fieldset>
     </body>
 </html>
